# amateras

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  requirements.txt.py  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/amateras/: __main__.py  _version.py  utils.py
src/amateras/cli/: bigcellfinder.py  fluorescencefinder.py  gui.py
tests/: img-2.tif  img.tif  test_cli.py
