[metadata]
name = amateras
author = Tobias Frick
description = image analysis tool for amateras microscope
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 1 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = amateras
install_requires =
    pandas>=0.24.2
    openpyxl>=2.4
    opencv-python>=4.5.5
    matplotlib>=3.5.1
    numpy>=1.21.0
    pandas>=1.3.5
    tqdm>=4.64.0
    python_tsp>=0.3.0
python_requires > = 3.7
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    amateras = amateras.__main__:main

[options.extras_require]
dev = flake8

[options.package_data]
amateras = py.typed

[flake8]
max-line-length = 88